Change BeanOverrideProcessor#createMetadata: return a List